# BERL

./: .gitignore  LICENSE  pyproject.toml
berl/: __init__.py  __main__.py  api.py  app.py  bulk.py  config.py  models.py  rate_limit.py  styles.tcss
berl/screens/: __init__.py  delete.py  explorer.py  filters.py  patch.py  token.py  upload.py
tests/: test_api.py  test_app_smoke.py  test_bulk.py  test_config.py  test_rate_limit.py
